# shorts-cutter

./: Cargo.toml  README.md  README_RU.md
.github/: copilot-instructions.md
.github/workflows/: release.yml
doc/: IMPLEMENTATION-GUIDE.md  SHORTS-CUTTER-DESIGN.md
src/: cli.rs  config.rs  error.rs  ffmpeg.rs  logger.rs  main.rs  utils.rs  worker.rs
